--- a/src/style/JumbotronContainer.scss
+++ b/src/style/JumbotronContainer.scss
@@ -8,12 +8,13 @@ $screen-xxs-min: 480px;
 
 .jumbotron-header {
   position: relative;
-  top: 150px;
-  margin: 0;
-  z-index: 1;
+  top: 100px;
+  z-index: 2;
   color: white;
+
+  display: inline;
   @media screen and (max-width: $screen-sm-min) {
-      font-size: pem;
+      font-size: 2em;
   }
 }
 
@@ -27,14 +28,12 @@ $screen-xxs-min: 480px;
   // fix this
   height: 100vh;
 }
+
 .home-jumbotron {
-  color: white;
-  background-image: url('../images/beach2.jpg');
-  background-size: cover;
-  background-position: center center;
-  margin-bottom:0;
-  // fix this
-  height: 100vh;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .home-jumbotron3 {
