--- a/src/style/BeachGallery.scss
+++ b/src/style/BeachGallery.scss
@@ -2,21 +2,34 @@
 	display: inline
 }
 
-.beachModal {
-	width: 90%;
-}
 
 .modal-body {
 	padding: 0;
 	border: 0;
 }
 
+
+.modal-dialog {
+  width: 100%;
+  height: 80%;
+  margin: 0;
+  padding: 0;
+}
+
 .modal-content {
-	border: 0;
-	box-shadow: 0;
+  height: auto;
+  min-height: 80%;
+  border-radius: 0;
 }
 
 
 .carousel-caption {
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.90)
+}
+.carousel {
+	.carousel-inner {
+			max-height: 100%;
+		.item {
+		}
+	}
 }
