passing multiple functions to get state of datepicker back to booking, need to rework for topdown approach at later time

--- a/src/style/JumbotronContainer2.scss
+++ b/src/style/JumbotronContainer2.scss
@@ -39,7 +39,14 @@ $screen-xxs-min: 480px;
   text-align: center;
   float: center;
   display: inline-block;
-  margin-top: 20px;
+  margin-left: 3px;
+  padding: 0;
+  div {
+    padding: 15px;
+  }
+  @media screen and (max-width: $screen-sm-min) {
+      margin-top: 10px;
+  }
 }
 
 
