--- a/src/style/BeachGallery.scss
+++ b/src/style/BeachGallery.scss
@@ -10,26 +10,19 @@
 
 
 .modal-dialog {
-  width: 100%;
-  height: 80%;
-  margin: 0;
+  width: 50%;
+  height: 50%;
+  margin: 0 auto;
   padding: 0;
 }
 
 .modal-content {
   height: auto;
-  min-height: 80%;
+  min-height: 50%;
   border-radius: 0;
 }
 
 
 .carousel-caption {
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.90)
-}
-.carousel {
-	.carousel-inner {
-			max-height: 100%;
-		.item {
-		}
-	}
 }
