--- a/src/style/BeachGallery.scss
+++ b/src/style/BeachGallery.scss
@@ -2,7 +2,9 @@
 	display: inline
 }
 
+/*
 
+FOR BEACH GALLERY ETC
 .modal-body {
 	padding: 0;
 	border: 0;
@@ -21,7 +23,7 @@
   min-height: 50%;
   border-radius: 0;
 }
-
+ */
 
 .carousel-caption {
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.90)
