--- a/src/style/IntroContainer.scss
+++ b/src/style/IntroContainer.scss
@@ -9,3 +9,10 @@
 	font-size: 1.2em;
 	margin-bottom: 16px;
 }
+
+.modal-dialog {
+    width: 75%;
+    height: 75%;
+    margin: 0 auto;
+    padding: 0;
+  }
